--- a/index.html
+++ b/index.html
@@ -24,3 +24,50 @@
 	.activeCustom {color:#FFF}
 	.inactiveCustom {color:#A9A9A9}
 </style>
+
+<link rel="shortcut icon" type="image/png" href="/static/Images/Profile/profileCircular.png"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Mayank Kumar Singh's Home Page">
+<meta name="author" content="Mayank Kumar Singh">
+<meta charset="UTF-8">
+<meta name="keywords" content="machine learning, artificial intelligence, coding">
+
+<meta property="og:title" content="Mayank's HomePage">
+<meta property="og:image" content="/static/Images/Profile/profileCircular512X512.png">
+<meta property="og:description" content="Mayank Kumar Singh's Home Page">
+
+<title>Mayank Kumar Singh</title>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110954752-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-110954752-1');
+</script>
+
+			gtag('config', 'UA-110954752-1');
+		</script>
+
+		<title>Homepage</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="static/assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="static/assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-loading">
+
+		<!-- Wrapper -->
+			<div id="wrapper" class="fade-in">
+
+				<!-- Intro -->
+					<div id="intro">
+						<h1>Welcome</h1>
+						<p>I, Mayank Kumar Singh, would like to share my work experience with you. </p>
+						<ul class="actions">
+							<li><a href="#main" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
+						</ul>
